fixed paragraph spacing at basic page, updated media module

--- a/sites/all/themes/mborg/css/basic-page-content-type.css
+++ b/sites/all/themes/mborg/css/basic-page-content-type.css
@@ -23,7 +23,7 @@
 .node-type-basic-page .field-item{
 	background-color: #FFFFFF;
 	background-color: rgba(255,255,255,0.8);
-	margin-bottom: 10px;
+	margin-bottom: 26px;
 	padding: 25px 10px 25px 16px;
 }
 
